Item: Trên trình duyệt safari thì gặp vấn đề giật giật header khi quận lên
Nguyên nhân:
 Khi cuộn, trình duyệt Safari thay đổi kích thước của thanh địa chỉ làm cho kết quả của function lấy vị trí scroll bị thay đổi

Giải pháp:
 - Sử dụng thuộc tính position=sticky thay cho fixed

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -1,4 +1,9 @@
-
+/* Header sticky */
+.has-sticky-header>.site-header:not(.header-layout-7){
+    position: sticky;
+    top: 0;
+    z-index: 99;
+}
 /* Header Menu */
 .site-header-inner {
 	border-bottom: 1px solid #eaeaea;
