--- a/assets/css/sass/base/base/base.scss
+++ b/assets/css/sass/base/base/base.scss
@@ -14,15 +14,17 @@ html{
     -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
-	overflow-x: hidden;
+	overflow: hidden;
     font-size: 14px;
     background-color: #fff;
 }
 
 body {
     margin: 0;
+    overflow: auto;
     overflow-x: hidden;
     word-break: break-word;
+    height: 100%;
 }
 
 article,
