--- a/assets/css/sass/base/base/base.scss
+++ b/assets/css/sass/base/base/base.scss
@@ -24,7 +24,15 @@ body {
     overflow: auto;
     overflow-x: hidden;
     word-break: break-word;
-    height: 100%;
+    height: 100vh;
+
+    &.admin-bar{
+        height: calc( 100vh - 32px);
+
+        @media screen and (max-width: 782px){
+            height: calc( 100vh - 46px );
+        }
+    }
 }
 
 article,
