--- a/style.css
+++ b/style.css
@@ -2117,7 +2117,15 @@ body {
   overflow: auto;
   overflow-x: hidden;
   word-break: break-word;
-  height: 100%;
+  height: 100vh;
+}
+body.admin-bar {
+  height: calc(100vh - 32px);
+}
+@media screen and (max-width: 782px) {
+  body.admin-bar {
+    height: calc(100vh - 46px);
+  }
 }
 
 article,
