--- a/assets/css/admin/welcome.scss
+++ b/assets/css/admin/welcome.scss
@@ -13,7 +13,7 @@
 				font-weight: 600;
 				font-size: 14px;
 				color: #637381;
-				line-height: 80px;
+				line-height: 66px;
 				position: relative;
 
 				&::after {
@@ -44,13 +44,16 @@
 			@media ( max-width: 767px ) {
 				.tab-head-button{
 					margin: 0 10px;
+					line-height: 55px;
 				}
 			}
 
-			@media ( max-width: 375px ) {
+			@media ( max-width: 480px ) {
 				flex-direction: column;
+				width: 100%;
 				.tab-head-button{
 					line-height: 40px;
+					margin: 0;
 					&::after{
 						width: 3px;
 						height: 100%;
