--- a/assets/css/admin/general.css
+++ b/assets/css/admin/general.css
@@ -1,4 +1,6 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap');
+ * {
 	 outline: none !important;
 }
  a {
@@ -75,7 +77,7 @@
 	 padding: 10px !important;
 }
 /* Remove padding-left on options page */
- body[class*="woostify-welcome"] #wpcontent, body[class*="woostify-options_page"] #wpcontent, body.woostify_page_smart-product-filter-settings #wpcontent, body.woostify_page_callback-settings #wpcontent {
+ body[class*="woostify-welcome"] #wpcontent, body[class*="woostify-options_page"] #wpcontent, body[class*="woostify_page"] #wpcontent, body.woostify_page_smart-product-filter-settings #wpcontent, body.woostify_page_callback-settings #wpcontent {
 	 padding: 0;
 }
 /* Style for 'Image' column in list post Admin */
@@ -205,7 +207,8 @@
 	 align-items: center;
 	 font-weight: 600;
 	 font-size: 14px;
-	 color: #373737;
+	 color: #000;
+	 font-family: 'Public Sans';
 }
  .woostify-welcome-nav .woostify-welcome-theme-support img {
 	 margin-right: 10px;
@@ -239,7 +242,7 @@
 	 padding: 0.5em;
 }
  .woostify-welcome-nav .woostify-welcome-nav_link a:hover {
-	 color: #373737;
+	 color: #000;
 }
  @media (min-width: 719px) {
 	 .woostify-welcome-nav .woostify-welcome-nav_link a {
@@ -255,6 +258,9 @@
 	 display: inline-block;
 	 margin: 0;
 }
+ .woostify-options-wrap .woostify-welcome-nav .woostify-setting-tab-head .tab-head-button {
+	 font-family: 'Public Sans';
+}
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-content .woostify-enhance__column {
 	 margin-bottom: 30px;
 	 padding: 30px 30px 50px;
@@ -263,13 +269,15 @@
 	 padding-bottom: 30px;
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-content .woostify-enhance__column .section-header {
+	 font-family: 'Inter';
 	 font-weight: 600;
-	 font-size: 18px;
+	 font-size: 17px;
 	 line-height: 21px;
-	 color: #373737;
+	 color: #000;
 	 margin-bottom: 37px;
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-content .woostify-enhance__column .section-header-link {
+	 font-family: 'Inter';
 	 font-style: normal;
 	 font-weight: 400;
 	 font-size: 14px;
@@ -294,15 +302,17 @@
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-content .woostify-enhance__column .woostify-grid-box .box-item .box-item__name {
 	 margin-top: 0;
-	 font-weight: 600;
-	 font-size: 14px;
-	 line-height: 1.5em;
-	 color: #373737;
+	 font-family: 'Inter';
+	 font-weight: 700;
+	 font-size: 12px;
+	 line-height: 15px;
+	 color: #000;
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-content .woostify-enhance__column .woostify-grid-box .box-item .box-item__link {
 	 margin-top: 0;
-	 font-weight: 600;
-	 font-size: 13px;
+	 font-family: 'Public Sans';
+	 font-weight: 700;
+	 font-size: 12px;
 	 line-height: 20px;
 	 padding: 4px 16px;
 	 color: #212b36;
@@ -339,18 +349,20 @@
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-sidebar .woostify-enhance__column .wf-quick-setting-section p {
 	 margin: 14px 0;
+	 font-family: 'Inter';
 	 font-weight: 400;
-	 font-size: 13px;
-	 line-height: 1.5em;
-	 color: #373737;
+	 font-size: 12px;
+	 line-height: 15px;
+	 color: #000;
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-sidebar .woostify-enhance__column .wf-quick-setting-section p:last-child {
 	 margin-bottom: 0;
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-sidebar .woostify-enhance__column .wf-quick-setting-section a {
+	 font-family: 'Inter';
 	 font-weight: 400;
-	 font-size: 13px;
-	 line-height: 1.5em;
+	 font-size: 12px;
+	 line-height: 15px;
 	 color: #4644b7;
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-sidebar .woostify-enhance__column .wf-quick-setting-section a svg {
@@ -359,10 +371,11 @@
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-sidebar .woostify-enhance__column h3 {
 	 display: flex;
 	 align-items: center;
+	 font-family: 'Inter';
 	 font-weight: 600;
 	 font-size: 17px;
 	 line-height: 21px;
-	 color: #373737;
+	 color: #000;
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .woostify-enhance-sidebar .woostify-enhance__column h3 svg {
 	 margin-left: 9px;
@@ -384,6 +397,7 @@
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .starter-sites-wrap .starter-sites-content h2 {
 	 margin-top: 0;
 	 margin-bottom: 12px;
+	 font-family: 'Public Sans';
 	 font-weight: 700;
 	 font-size: 24px;
 	 line-height: 36px;
@@ -391,6 +405,7 @@
 }
  .woostify-options-wrap .woostify-welcome-content .woostify-welcome-settings-section-tab .woostify-setting-tab-content .starter-sites-wrap .starter-sites-content p {
 	 margin: 0;
+	 font-family: 'Public Sans';
 	 font-weight: 400;
 	 font-size: 16px;
 	 line-height: 24px;
@@ -401,6 +416,7 @@
 	 display: block;
 	 background: #4644b7;
 	 border-radius: 8px;
+	 font-family: 'Public Sans';
 	 font-weight: 700;
 	 font-size: 15px;
 	 line-height: 26px;
@@ -455,7 +471,7 @@
 	 font-weight: 600;
 	 font-size: 17px;
 	 line-height: 21px;
-	 color: #373737;
+	 color: #000;
 	 margin-top: 0;
 	 margin-bottom: 0;
 }
@@ -495,7 +511,8 @@
 	 position: absolute;
 	 top: 10px;
 	 right: 15px;
-	 font-weight: 600;
+	 font-family: 'Public Sans';
+	 font-weight: 700;
 	 font-size: 8px;
 	 line-height: 9px;
 	 color: #22af58;
@@ -512,21 +529,24 @@
 	 padding-left: 22px;
 }
  .woostify-module-info .woostify-module-info-list .module-info-item .module-info-item-title {
-	 font-weight: 600;
-	 font-size: 14px;
+	 font-family: 'Inter';
+	 font-weight: 700;
+	 font-size: 12px;
 	 line-height: 15px;
-	 color: #373737;
+	 color: #000;
 	 margin-top: 0;
 	 margin-bottom: 8px;
 }
  .woostify-module-info .woostify-module-info-list .module-info-item .module-info-item-description {
+	 font-family: 'Inter';
 	 font-weight: 400;
-	 font-size: 13px;
+	 font-size: 12px;
 	 line-height: 15px;
-	 color: #373737;
+	 color: #000;
 	 margin-bottom: 8px;
 }
  .woostify-module-info .woostify-module-info-list .module-info-item .module-info-item-doc {
+	 font-family: 'Inter';
 	 font-weight: 400;
 	 font-size: 12px;
 	 line-height: 15px;
@@ -559,7 +579,8 @@
 }
  .woostify-module-info .module-info-view-all-addon .module-info-view-all-addon-btn {
 	 display: inline-block;
-	 font-weight: 600;
+	 font-family: 'Inter';
+	 font-weight: 700;
 	 font-size: 14px;
 	 line-height: 17px;
 	 color: #4644b7;
@@ -579,6 +600,7 @@
  .changelog-woostify .changelog-woostify-header .changelog-woostify-title {
 	 letter-spacing: -0.02em;
 	 color: #0d1a33;
+	 font-family: 'Inter';
 	 font-weight: 600;
 	 font-size: 16px;
 	 line-height: 20px;
@@ -588,8 +610,9 @@
 	 text-align: center;
 	 display: inline-block;
 	 padding: 8px;
+	 font-family: 'Inter';
 	 font-weight: 600;
-	 font-size: 13px;
+	 font-size: 12px;
 	 line-height: 16px;
 	 letter-spacing: -0.02em;
 	 background: #4644b7;
@@ -679,8 +702,9 @@
 }
  .changelog-woostify .changelog-woostify-content .changelog-woostify-version .changelog-version-heading {
 	 margin-bottom: 14px;
+	 font-family: 'Inter';
 	 font-weight: 600;
-	 font-size: 14px;
+	 font-size: 12px;
 	 line-height: 16px;
 	 color: #0d1a33;
 }
@@ -696,8 +720,9 @@
  .changelog-woostify .changelog-woostify-content .changelog-woostify-version .changelog-version-content li {
 	 padding: 8px 0;
 	 margin-bottom: 0;
+	 font-family: 'Inter';
 	 font-weight: 400;
-	 font-size: 14px;
+	 font-size: 12px;
 	 line-height: 16px;
 	 letter-spacing: -0.01em;
 	 color: #0d1a33;
@@ -718,8 +743,9 @@
 }
  .changelog-woostify .page-numbers span {
 	 margin: 2px;
+	 font-family: 'Public Sans';
 	 font-weight: 400;
-	 font-size: 14px;
+	 font-size: 10px;
 	 line-height: 24px;
 	 color: #212b36;
 	 border-radius: 50%;
