--- a/assets/css/admin/general.scss
+++ b/assets/css/admin/general.scss
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap');
-
 * {
 	outline: none !important;
 }
@@ -318,13 +315,6 @@ body{
 
 // woostify
 .woostify-options-wrap{
-	.woostify-welcome-nav{
-		.woostify-setting-tab-head{
-			.tab-head-button{
-				font-family: 'Public Sans';
-			}
-		}
-	}
 	.woostify-welcome-content{
 		.woostify-welcome-settings-section-tab{
 			.woostify-setting-tab-content{
@@ -336,15 +326,13 @@ body{
 							padding-bottom: 30px;
 						}
 						.section-header{
-							font-family: 'Inter';
 							font-weight: 600;
 							font-size: 17px;
 							line-height: 21px;
-							color: #000000;
+							color: #242424;
 							margin-bottom: 37px;
 						}
 						.section-header-link{
-							font-family: 'Inter';
 							font-style: normal;
 							font-weight: 400;
 							font-size: 14px;
@@ -367,18 +355,16 @@ body{
 								}
 								.box-item__name{
 									margin-top: 0;
-									font-family: 'Inter';
-									font-weight: 700;
-									font-size: 12px;
-									line-height: 15px;
-									color: #000000;
+									font-weight: 600;
+									font-size: 14px;
+									line-height: 1.3em;
+									color: #242424;
 								}
 								.box-item__link{
 									margin-top: 0;
-									font-family: 'Public Sans';
-									font-weight: 700;
-									font-size: 12px;
-									line-height: 20px;
+									font-weight: 600;
+									font-size: 14px;
+									line-height: 1.5em;
 									padding: 4px 16px;
 									color: #212B36;
 									border: 1px solid rgba(145, 158, 171, 0.32);
@@ -417,19 +403,17 @@ body{
 							margin-top: 15px;
 							p{
 								margin: 14px 0;
-								font-family: 'Inter';
 								font-weight: 400;
-								font-size: 12px;
-								line-height: 15px;
-								color: #000000;
+								font-size: 14px;
+								line-height: 1.5em;
+								color: #242424;
 								&:last-child{
 									margin-bottom: 0;
 								}
 							}
 							a{
-								font-family: 'Inter';
 								font-weight: 400;
-								font-size: 12px;
+								font-size: 14px;
 								line-height: 15px;
 								color: #4644B7;
 								svg{
@@ -440,11 +424,10 @@ body{
 						h3{
 							display: flex;
 							align-items: center;
-							font-family: 'Inter';
 							font-weight: 600;
 							font-size: 17px;
 							line-height: 21px;
-							color: #000000;
+							color: #242424;
 							svg{
 								margin-left: 9px;
 							}
@@ -466,7 +449,6 @@ body{
 						h2{
 							margin-top: 0;
 							margin-bottom: 12px;
-							font-family: 'Public Sans';
 							font-weight: 700;
 							font-size: 24px;
 							line-height: 36px;
@@ -474,7 +456,6 @@ body{
 						}
 						p{
 							margin: 0;
-							font-family: 'Public Sans';
 							font-weight: 400;
 							font-size: 16px;
 							line-height: 24px;
@@ -485,8 +466,7 @@ body{
 							display: block;
 							background: #4644b7;
 							border-radius: 8px;
-							font-family: 'Public Sans';
-							font-weight: 700;
+							font-weight: 600;
 							font-size: 15px;
 							line-height: 26px;
 							padding: 10px;
@@ -510,7 +490,7 @@ body{
 							border: 1px solid #DBDBDB;
 							border-radius: 4px 4px 0px 0px;
 							&.active{
-								font-weight: 700;
+								font-weight: 600;
 								background: #FFFFFF;
 								border-width: 1px 1px 0px 1px;
 								border-style: solid;
@@ -523,7 +503,7 @@ body{
 						.woostify-setting-tab-head{
 							padding-left: 40px;
 							.tab-head-button{
-								font-size: 13px;
+								font-size: 14px;
 								padding: 10px 16px;
 							}
 						}
@@ -548,7 +528,7 @@ body{
 			font-weight: 600;
 			font-size: 17px;
 			line-height: 21px;
-			color: #000000;
+			color: #242424;
 			margin-top: 0;
 			margin-bottom: 0;
 		}
@@ -614,28 +594,25 @@ body{
 			}
 
 			.module-info-item-title{
-				font-family: 'Inter';
-				font-weight: 700;
-				font-size: 12px;
-				line-height: 15px;
-				color: #000000;
+				font-weight: 600;
+				font-size: 14px;
+				line-height: 1.3em;
+				color: #202020;
 				margin-top: 0;
 				margin-bottom: 8px;
 			}
 
 			.module-info-item-description{
-				font-family: 'Inter';
 				font-weight: 400;
-				font-size: 12px;
-				line-height: 15px;
-				color: #000000;
+				font-size: 14px;
+				line-height: 1.5em;
+				color: #242424;
 				margin-bottom: 8px;
 			}
 
 			.module-info-item-doc{
-				font-family: 'Inter';
 				font-weight: 400;
-				font-size: 12px;
+				font-size: 14px;
 				line-height: 15px;
 				color: #A7A7A7;
 			}
@@ -697,7 +674,6 @@ body{
 		.changelog-woostify-title{
 			letter-spacing: -0.02em;
 			color: #0D1A33;
-			font-family: 'Inter';
 			font-weight: 600;
 			font-size: 16px;
 			line-height: 20px;
@@ -707,10 +683,9 @@ body{
 			text-align: center;
 			display: inline-block;
 			padding: 8px;
-			font-family: 'Inter';
 			font-weight: 600;
-			font-size: 12px;
-			line-height: 16px;
+			font-size: 14px;
+			line-height: 1.5em;
 			letter-spacing: -0.02em;
 			background: #4644B7;
 			border-radius: 4px;
@@ -804,10 +779,9 @@ body{
 			}
 			.changelog-version-heading{
 				margin-bottom: 14px;
-				font-family: 'Inter';
 				font-weight: 600;
-				font-size: 12px;
-				line-height: 16px;
+				font-size: 14px;
+				line-height: 1.5em;
 				color: #0D1A33;
 				.changelog-version-date{
 					margin-left: 4px;
@@ -823,10 +797,9 @@ body{
 				li{
 					padding: 8px 0;
 					margin-bottom: 0;
-					font-family: 'Inter';
 					font-weight: 400;
-					font-size: 12px;
-					line-height: 16px;
+					font-size: 14px;
+					line-height: 1.5em;
 					letter-spacing: -0.01em;
 					color: #0D1A33;
 				}
@@ -852,9 +825,8 @@ body{
 		padding: 12px 10px 16px;
 		span{
 			margin: 2px;
-			font-family: 'Public Sans';
 			font-weight: 400;
-			font-size: 10px;
+			font-size: 14px;
 			line-height: 24px;
 			color: #212B36;
 			border-radius: 50%;
