origin/feat/Tren_trinh_duyet_safari_thi_gap_van_de_giat_giat_header_khi_quan_len Fix những ảnh hưởng liên quan khi cho html overflow hidden

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -1,8 +1,17 @@
-/* Header sticky */
-.has-sticky-header>.site-header:not(.header-layout-7){
+/* Header sticky. Theo nhu trong file js thi bo qua header layout 7 */
+.has-sticky-header .site-header:not(.header-layout-7){
     position: sticky;
     top: 0;
     z-index: 99;
+}
+/* Theo dinh nghia cua wp-admin bar */
+.has-sticky-header.admin-bar .site-header:not(.header-layout-7){
+	@media screen and (min-width: 601px){
+		top: 46px;
+	}
+	@media screen and (min-width: 783px){
+		top: 32px;
+	}
 }
 /* Header Menu */
 .site-header-inner {
